Stylesheet/emote/tag updates 2017-03-31

--- a/source-css/glimmerquisition.css
+++ b/source-css/glimmerquisition.css
@@ -348,3 +348,12 @@ a[href|="/moondancercheery"] {
   width: 70px;
   background-position: -1050px 0;
 }
+
+a[href|="/shiningspikeboop"] {
+  float: left;
+  display: block;
+  height: 79px;
+  width: 176px;
+  background-image: url(%%shiningspikeboop%%);
+  background-position: 0 0;
+}
