--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -15,7 +15,7 @@ a { cursor: url(%%cursor1%%), pointer; }
 /* Changes background  */
 
  body:first-of-type, body.res-nightmode:first-of-type {
-    background:  url(%%cheerilove%%) fixed no-repeat 66% 100% !important;
+    background:  url(%%amazingart%%) fixed no-repeat 66% 100% !important;
 }go
 
 
@@ -31,7 +31,7 @@ a { cursor: url(%%cursor1%%), pointer; }
 
 
  #header #header-bottom-left {
-   background: url(%%lovebanner%%) 50% 28px !important;
+   background: url(%%LOLIALTRIGHT%%) 50% 28px !important;
    background-repeat: no-repeat!important;
    background-position: 35% 0px;
 }
@@ -797,7 +797,9 @@ a.author[href$=topkekbestkek],
 a.author[href$=DoomKey],
 a.author[href$=thisisgenny],
 a.author[href$=DRANKLE],
+a.author[href$=HailTrixie],
 a.author[href$=throwawayaccount997]
+
 
 { 
 font-size:0!important; 
@@ -933,7 +935,11 @@ a.author[href$=topkekbestkek]:before,
 a.author[href$=DoomKey]:before,
 a.author[href$=DRANKLE]:before,
 a.author[href$=thisisgenny]:before,
+a.author[href$=HailTrixie]:before,
 a.author[href$=throwawayaccount997]:before
+
+
+
 {
 font-size:10px!important; 
 visibility:visible!important;
@@ -1067,7 +1073,8 @@ a.author[href$=IndigoMichigan]:before { content:"Indi" }
 a.author[href$=DRANKLE]:before { content:"T-Light aka NOT-DRANKLE" }
 a.author[href$=thisisgenny]:before { content:"genny" }
 a.author[href$=throwawayaccount997]:before { content:"Fritters" }
-a.author[href$=Admos123] : before { content:"Fun with Atoms" }
+a.author[href$=Admos123]: before { content:"Fun with Atoms" }
+a.author[href$=HailTrixie]: before { content:"Traxle" }
 
 /* Replacing puppy's name with a picture of derpy */
 a.author[href$=iiRockpuppy]:before 
