--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -458,7 +458,7 @@ a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a
 {background-image:url(%%70x70b%%);width:70px;height:70px;display:block;float:left;}
 
 /* 70x70c 'motes */
-a[href|="/trixcookie"], a[href|="/spitfirejudge"], a[href|="/marblescared"], a[href|="/apathiawhat"], a[href|="/changelingsad"], a[href|="/sadtwilight"], a[href|="/sadtwilight2"], a[href|="/twicheesy"], a[href|="/fritterugh"], a[href|="/frittugh"], a[href|="/celestiahh"], a[href|="/nervoustrixie"], a[href|="/youkickedthepuppy"], a[href|="/disreally"], a[href|="/ssshy"], a[href|="/ajangry"], a[href|="/twidisappointed"], a[href|="/sadscoots"], a[href|="/rdspeechless"], a[href|="/scootadrunk"], a[href|="/didneyland"], a[href|="/DIDNEYLAND"], a[href|="/ssawe"], a[href|="/crazyfs"], a[href|="/fstwicrazy"], a[href|="/flutterconfused"], a[href|="/changelingmad"], a[href|="/celoohshiny"], a[href|="/mayormare"], a[href|="/ppcuteshrug"], a[href|="/riffyeah"], a[href|="/supersmugdash"], a[href|="/rdyes"], a[href|="/starlightbeam"], a[href|="/nervousshy"], a[href|="/quibblepants"], a[href|="/moondancerexcited"], a[href|="/ajuwotm8"], a[href|="/ajuwatm8"], a[href|="/celestiawtf"], a[href|="/dragonlordtorch"], a[href|="/rdwutbag"], a[href|="/moondancercrazy"], a[href|="/moondancersquint"], a[href|="/whofarted"], a[href|="/ajwingspanked"], a[href|="/sadtwilight3"], a[href|="/yaksmash"]
+a[href|="/trixcookie"], a[href|="/spitfirejudge"], a[href|="/marblescared"], a[href|="/apathiawhat"], a[href|="/changelingsad"], a[href|="/sadtwilight"], a[href|="/sadtwilight2"], a[href|="/twicheesy"], a[href|="/fritterugh"], a[href|="/frittugh"], a[href|="/celestiahh"], a[href|="/nervoustrixie"], a[href|="/youkickedthepuppy"], a[href|="/disreally"], a[href|="/ssshy"], a[href|="/ajangry"], a[href|="/twidisappointed"], a[href|="/sadscoots"], a[href|="/rdspeechless"], a[href|="/scootadrunk"], a[href|="/didneyland"], a[href|="/DIDNEYLAND"], a[href|="/ssawe"], a[href|="/crazyfs"], a[href|="/fstwicrazy"], a[href|="/flutterconfused"], a[href|="/changelingmad"], a[href|="/celoohshiny"], a[href|="/mayormare"], a[href|="/ppcuteshrug"], a[href|="/riffyeah"], a[href|="/supersmugdash"], a[href|="/rdyes"], a[href|="/starlightbeam"], a[href|="/nervousshy"], a[href|="/quibblepants"], a[href|="/moondancerexcited"], a[href|="/ajuwotm8"], a[href|="/ajuwatm8"], a[href|="/celestiawtf"], a[href|="/dragonlordtorch"], a[href|="/rdwutbag"], a[href|="/moondancercrazy"], a[href|="/moondancersquint"], a[href|="/whofarted"], a[href|="/ajwingspanked"], a[href|="/sadtwilight3"], a[href|="/yaksmash"], a[href|="/twiwatstare"]
 {background-image:url(%%70x70c%%);width:70px;height:70px;display:block;float:left;}
 
 /* 100x100a 'motes. */
@@ -474,7 +474,7 @@ a[href|="/sadbot"], a[href|="/trixiecrazy"], a[href|="/wheredidthemuffingo"], a[
 {background-image:url(%%100x100c%%);width:100px;height:100px;display:block;float:left;}
 
 /* 100x100d 'motes */
-a[href|="/vinylscrewyou"], a[href|="/browniewat"], a[href|="/rainbowtwiglee"], a[href|="/sillybooze"], a[href|="/chrysathis"], a[href|="/discordsmug"], a[href|="/discrazy"], a[href|="/emberhappy"], a[href|="/trixieface"], a[href|="/ikickedthepuppy"], a[href|="/sadspike"], a[href|="/whatismylife"], a[href|="/fsfu"], a[href|="/ponk"], a[href|="/nerdfleetfoot"], a[href|="/cadancegonnacutsomeone"], a[href|="/cadencegonnacutsomeone"], a[href|="/flutterhonk"], a[href|="/smugshy"], a[href|="/sunsetcrazy"], a[href|="/raricatmallow"], a[href|="/raricatmellow"], a[href|="/twiscrunchwings"], a[href|="/trixiebag"], a[href|="/twilightyoufool"], a[href|="/twilightscold"], a[href|="/chrysalisrage"], a[href|="/youdensemotherbucker"], a[href|="/ponkponder"], a[href|="/peachhack"], a[href|="/rude"], a[href|="/nightmarewut"], a[href|="/rddisapproves"], a[href|="/midnightaegis"], a[href|="/twistop"]
+a[href|="/vinylscrewyou"], a[href|="/browniewat"], a[href|="/rainbowtwiglee"], a[href|="/sillybooze"], a[href|="/chrysathis"], a[href|="/discordsmug"], a[href|="/discrazy"], a[href|="/emberhappy"], a[href|="/trixieface"], a[href|="/ikickedthepuppy"], a[href|="/sadspike"], a[href|="/whatismylife"], a[href|="/fsfu"], a[href|="/ponk"], a[href|="/nerdfleetfoot"], a[href|="/cadancegonnacutsomeone"], a[href|="/cadencegonnacutsomeone"], a[href|="/flutterhonk"], a[href|="/smugshy"], a[href|="/sunsetcrazy"], a[href|="/raricatmallow"], a[href|="/raricatmellow"], a[href|="/twiscrunchwings"], a[href|="/trixiebag"], a[href|="/twilightyoufool"], a[href|="/twilightscold"], a[href|="/chrysalisrage"], a[href|="/youdensemotherbucker"], a[href|="/ponkponder"], a[href|="/peachhack"], a[href|="/rude"], a[href|="/nightmarewut"], a[href|="/rddisapproves"], a[href|="/midnightaegis"], a[href|="/twistop"], a[href|="/twithinking"], a[href|="/shouldikickthepuppy"], a[href|="/tiajealous"]
 {background-image:url(%%100x100d%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
@@ -498,7 +498,7 @@ a[href|="/boopening"], a[href|="/agentt"], a[href|="/hoodiedash"], a[href|="/shy
 {background-image:url(%%150x150e%%);width:150px;height:150px;display:block;float:left;}
 
 /* 150x150f 'motes */
-a[href|="/twitation"], a[href|="/yourexistenceannoysme"], a[href|="/apfle"], a[href|="/derpystop"]
+a[href|="/twitation"], a[href|="/yourexistenceannoysme"], a[href|="/apfle"], a[href|="/derpystop"], a[href|="/abstop"], a[href|="/octilewd"], a[href|="/fingerguns"], a[href|="/thatswhereyourewrongkiddo"]
 {background-image:url(%%150x150f%%);width:150px;height:150px;display:block;float:left;}
 
 /* 200x200a 'motes. */
@@ -579,7 +579,7 @@ a[href|="/flscrunch"], a[href|="/downcastspike"], a[href|="/lyraseewhatyoudidthe
 {background-image:url(%%misfitso%%);display:block;float:left;}
 
 /* Misfits p */
-a[href|="/celestiawat"], a[href|="/hellodarkness"], a[href|="/discordross"], a[href|="/fluttersmugsmall"], a[href|="/reasonablysizedfluttersmug"], a[href|="/smugpuppykicking"], a[href|="/ppspooks"], a[href|="/trixiedisgust"], a[href|="/chairmanstarlight"], a[href|="/chairmarestarlight"]
+a[href|="/celestiawat"], a[href|="/hellodarkness"], a[href|="/discordross"], a[href|="/fluttersmugsmall"], a[href|="/reasonablysizedfluttersmug"], a[href|="/smugpuppykicking"], a[href|="/ppspooks"], a[href|="/trixiedisgust"], a[href|="/chairmanstarlight"], a[href|="/chairmarestarlight"], a[href|="/sodacookie"], a[href|="/sadhug"], a[href|="/octyvinylboop"], a[href|="/sunburstwat"]
 {background-image:url(%%misfitsp%%);display:block;float:left;}
 
 /*
@@ -603,15 +603,15 @@ a[href|="/twihappycry"], a[href|="/nightmaresparkle"], a[href|="/nomakeup"], a[h
 {background-position: 0 -100%;}
 
 /* Grid pos 1,1 'motes */
-a[href|="/properbudget"], a[href|="/twiscepter"], a[href|="/twisceptre"], a[href|="/grannyglad"], a[href|="/magnemites"], a[href|="/gravestone"], a[href|="/theydied"], a[href|="/scootasquee"], a[href|="/greatandpowerfuldinky"], a[href|="/ninetales"], a[href|="/zecoracarry"], a[href|="/twifascinating"], a[href|="/cadsad"], a[href|="/discordnorespect"], a[href|="/toughcrowd"], a[href|="/changelingsad"], a[href|="/chrysathis"]
+a[href|="/properbudget"], a[href|="/twiscepter"], a[href|="/twisceptre"], a[href|="/grannyglad"], a[href|="/magnemites"], a[href|="/gravestone"], a[href|="/theydied"], a[href|="/scootasquee"], a[href|="/greatandpowerfuldinky"], a[href|="/ninetales"], a[href|="/zecoracarry"], a[href|="/twifascinating"], a[href|="/cadsad"], a[href|="/discordnorespect"], a[href|="/toughcrowd"], a[href|="/changelingsad"], a[href|="/chrysathis"], a[href|="/abstop"]
 {background-position: -100% -100%;}
 
 /* Grid pos 2,1 'motes */
-a[href|="/celestiaglee"], a[href|="/winona"], a[href|="/aloe"], a[href|="/princessfluttershy"], a[href|="/rarihick"], a[href|="/fillycoco"], a[href|="/redheart"], a[href|="/venasaur"], a[href|="/sunsetjoy"], a[href|="/sassybloom"], a[href|="/necklestia"], a[href|="/sunsetmaid"], a[href|="/sadtwilight"], a[href|="/discordsmug"]
+a[href|="/celestiaglee"], a[href|="/winona"], a[href|="/aloe"], a[href|="/princessfluttershy"], a[href|="/rarihick"], a[href|="/fillycoco"], a[href|="/redheart"], a[href|="/venasaur"], a[href|="/sunsetjoy"], a[href|="/sassybloom"], a[href|="/necklestia"], a[href|="/sunsetmaid"], a[href|="/sadtwilight"], a[href|="/discordsmug"], a[href|="/octilewd"]
 {background-position: -200% -100%;}
 
 /* Grid pos 0,2 'motes */
-a[href|="/frittergasp"], a[href|="/ohyeah"], a[href|="/lunahmm"], a[href|="/pinkpyro"], a[href|="/fshide"], a[href|="/ajrescue"], a[href|="/scaryaj"], a[href|="/cybermedic"], a[href|="/sweetiebloom"], a[href|="/karmahappy2"], a[href|="/rdhello"], a[href|="/macship"], a[href|="/sadtwilight2"], a[href|="/discrazy"], a[href|="/sweepsweepsweep"]
+a[href|="/frittergasp"], a[href|="/ohyeah"], a[href|="/lunahmm"], a[href|="/pinkpyro"], a[href|="/fshide"], a[href|="/ajrescue"], a[href|="/scaryaj"], a[href|="/cybermedic"], a[href|="/sweetiebloom"], a[href|="/karmahappy2"], a[href|="/rdhello"], a[href|="/macship"], a[href|="/sadtwilight2"], a[href|="/discrazy"], a[href|="/sweepsweepsweep"], a[href|="/fingerguns"], a[href|="/thatswhereyourewrongkiddo"]
 {background-position: 0 -200%;}
 
 /* Grid pos 1,2 'motes */
@@ -711,11 +711,11 @@ a[href|="/shibeshy"], a[href|="/twiworry"], a[href|="/suggestia"], a[href|="/das
 {background-position: -0% -1000%;}
 
 /* Grid pos 1,10 'motes */
-a[href|="/appleshibe"], a[href|="/apathiareally"], a[href|="/rdcringe"], a[href|="/daringtired"], a[href|="/daringlaugh"], a[href|="/moondancerexcited"]
+a[href|="/appleshibe"], a[href|="/apathiareally"], a[href|="/rdcringe"], a[href|="/daringtired"], a[href|="/daringlaugh"], a[href|="/moondancerexcited"], a[href|="/twithinking"], a[href|="/shouldikickthepuppy"]
 {background-position: -100% -1000%;}
 
 /* Grid pos 2,10 'motes */
-a[href|="/shibedash"], a[href|="/karmasmile"], a[href|="/rdcantwait"], a[href|="/fs:I"], a[href|="/fsboop"], a[href|="/daringpoker"], a[href|="/ajuwotm8"], a[href|="/ajuwatm8"]
+a[href|="/shibedash"], a[href|="/karmasmile"], a[href|="/rdcantwait"], a[href|="/fs:I"], a[href|="/fsboop"], a[href|="/daringpoker"], a[href|="/ajuwotm8"], a[href|="/ajuwatm8"], a[href|="/tiajealous"]
 {background-position: -200% -1000%;}
 
 /* Grid pos 0,11 'motes */
@@ -755,7 +755,7 @@ a[href|="/rdbwaha"], a[href|="/grinlestia"], a[href|="/yaksmash"]
 {background-position: -200% -1300%;}
 
 /* Grid pos 0,14 'motes */
-a[href|="/lemonfire"], a[href|="/daringblush"]
+a[href|="/lemonfire"], a[href|="/daringblush"], a[href|="/twiwatstare"]
 {background-position: 0 -1400%;}
 
 /* Grid pos 1,14 'motes */
@@ -1214,3 +1214,7 @@ a[href|="/fluttersmugsmall"], a[href|="/reasonablysizedfluttersmug"], a[href|="/
 a[href|="/ppspooks"] {width:91px;height:100px;background-position: -363px 0}
 a[href|="/trixiedisgust"] {width:120px;height:120px;background-position: 0 -250px}
 a[href|="/chairmanstarlight"], a[href|="/chairmarestarlight"] {width:129px;height:200px;background-position: 0 -370px}
+a[href|="/sodacookie"] {width:74px;height:100px;background-position: -454px 0}
+a[href|="/sadhug"] {width:199px;height:150px;background-position: -108px -100px}
+a[href|="/octyvinylboop"] {width:227px;height:150px;background-position: -307px -100px}
+a[href|="/sunburstwat"] {width:127px;height:200px;background-position: -129px -370px}
