--- a/source-css/shymotes.css
+++ b/source-css/shymotes.css
@@ -3003,6 +3003,104 @@ a[href|="/pinkieblanket"]{
 
 
 
+a[href="/shybag"],
+
+a[href="/flutterwhoops"],
+
+a[href="/flutterreject"],
+
+a[href="/morningflutters"],
+
+a[href="/flutterpinkplay"],
+
+a[href="/flutterstartled"],
+
+a[href="/flutterpeeved"]{
+
+  display:block;
+
+  clear:none;
+
+  float:left;
+
+  background-image:url(%%shymoteslarge02%%);
+
+}
+
+a[href|="/shybag"]{
+
+  background-position:-0px -0px;
+
+  width:120px;
+
+  height:125px;
+
+}
+
+a[href|="/flutterwhoops"]{
+
+  background-position:-0px -125px;
+
+  width:113px;
+
+  height:125px;
+
+}
+
+a[href|="/flutterreject"]{
+
+  background-position:-0px -250px;
+
+  width:116px;
+
+  height:125px;
+
+}
+
+a[href|="/morningflutters"]{
+
+  background-position:-0px -375px;
+
+  width:93px;
+
+  height:125px;
+
+}
+
+a[href|="/flutterpinkplay"]{
+
+  background-position:-0px -500px;
+
+  width:164px;
+
+  height:150px;
+
+}
+
+a[href|="/flutterstartled"]{
+
+  background-position:-0px -650px;
+
+  width:168px;
+
+  height:150px;
+
+}
+
+a[href|="/flutterpeeved"]{
+
+  background-position:-0px -800px;
+
+  width:78px;
+
+  height:100px;
+
+}
+
+
+
+
+
 
 
 
