--- a/source-css/clopclop.css
+++ b/source-css/clopclop.css
@@ -1,20 +1,5 @@
+.spoiler a.title:not(:hover) {background:rgba(0,0,0,0.7);color:rgba(0,0,0,0)!important}
 
-
-a.author{position:relative}
-a.author:before{display:block;content:url(%%santahat%%);position:absolute;left:-6px;top:-4px;transform: rotate(-13deg);}
-
-
-.entry {
-    overflow: unset}
-
-
-
-
-
-
-/* Temp CATG2 Code */
-
-.side .titlebox .usertext-body > .md > p:nth-child(1) > a {display:block;background:#cee3f8;text-align:center;padding:10px 0px;border-radius:3px;margin:10px -10px;border:1px solid #9af;box-shadow:0 0 10px rgba(0,0,50,0.2);}
 
 /* Custom Flairs */
 .flair-creator-mlpiv {
